[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]

[node name="UIContainer" type="ViewportContainer"]
margin_right = 1282.0
margin_bottom = 738.0
stretch = true
script = ExtResource( 1 )

[node name="CR_Background" type="ColorRect" parent="."]
margin_right = 124.0
margin_bottom = 86.0
color = Color( 0, 0, 0, 0.45098 )

[node name="LBL_Variables" type="Label" parent="CR_Background"]
margin_right = 65.0
margin_bottom = 82.0
text = "Health:
Bullets:
Shells:
Energy:
Explosion:"

[node name="LBL_Health" type="Label" parent="CR_Background/LBL_Variables"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
text = "0"
align = 2

[node name="LBL_Bullets" type="Label" parent="CR_Background/LBL_Variables"]
margin_left = 80.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 30.0
text = "0"
align = 2

[node name="LBL_Shells" type="Label" parent="CR_Background/LBL_Variables"]
margin_left = 80.0
margin_top = 34.0
margin_right = 120.0
margin_bottom = 48.0
text = "0"
align = 2

[node name="LBL_Energy" type="Label" parent="CR_Background/LBL_Variables"]
margin_left = 80.0
margin_top = 51.0
margin_right = 120.0
margin_bottom = 65.0
text = "0"
align = 2

[node name="LBL_Explosion" type="Label" parent="CR_Background/LBL_Variables"]
margin_left = 80.0
margin_top = 68.0
margin_right = 120.0
margin_bottom = 82.0
text = "0"
align = 2

